samples/_failures_safe/1761497879_0de618_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_78694b30.c: In function ‘main’:
./samples/SAFE/__tmp_78694b30.c:153:9: error: expected declaration or statement at end of input
  153 |         }
      |         ^
./samples/SAFE/__tmp_78694b30.c:153:9: error: expected declaration or statement at end of input
